--- a/lib/css/main.scss
+++ b/lib/css/main.scss
@@ -2,7 +2,7 @@
 
 /* Defaults
 -----------------------------------------------------------------------------------------------------*/
-* {margin:0; padding:0; color:#666666; outline:0; font-size:12px; font-family:tahoma,verdana,sans-serif;}
+* {margin:0; padding:0; color:#666666; outline:0; font-size:12px; font-family:arial, sans-serif;}
 *, *:before, *:after {
   @include box-sizing(border-box);
 }
@@ -223,6 +223,7 @@ span.tag-low {
   @include gradient(#f9f9f9, #e9e9e9);
   select {
     opacity: 0;
+    width:100%;
   }
   .ui-select {
     position: absolute;
