--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -319,10 +319,15 @@ ul.ui-list {
   border-top: 1px solid #F9F9F9;
   border-left: 1px solid #CDCDCD;
   border-bottom: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
-  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true',sizingMethod='image'); }
+  border-right: 1px solid #EEEEEE; }
   .ui-field-input a.icon {
-    padding-left: 0; }
+    padding-left: 0;
+    -moz-border-top-right-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    border-top-right-radius: 3px;
+    -moz-border-bottom-right-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    border-bottom-right-radius: 3px; }
     .ui-field-input a.icon:before {
       margin-left: -2px;
       top: -2px; }
@@ -391,32 +396,32 @@ ul.ui-list {
   width: auto; }
 
 .ui-button-inner.ui-button-title, .ui-button-option .ui-button-inner {
-  border-color: #dcdcdc;
-  -moz-box-shadow: inset 0 1px 0 0 #ffffff;
-  -webkit-box-shadow: inset 0 1px 0 0 #ffffff;
-  box-shadow: inset 0 1px 0 0 #ffffff;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
-  background: -moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+  border-color: #e0e0e0;
+  -moz-box-shadow: inset 0 1px 0 0 white;
+  -webkit-box-shadow: inset 0 1px 0 0 white;
+  box-shadow: inset 0 1px 0 0 white;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e5e5e5));
+  background: -moz-linear-gradient(top, #f9f9f9 5%, #e5e5e5 100%);
+  background: -webkit-linear-gradient(top, #f9f9f9 5%, #e5e5e5 100%);
+  background: -o-linear-gradient(top, #f9f9f9 5%, #e5e5e5 100%);
+  background: -ms-linear-gradient(top, #f9f9f9 5%, #e5e5e5 100%);
+  background: linear-gradient(to bottom, #f9f9f9 5%, #e5e5e5 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to',GradientType=0); }
 
 .ui-button-inner.ui-button-title.type2, .ui-button-option .ui-button-inner.type2 {
-  border-color: #384A62;
-  -moz-box-shadow: inset 0 1px 0 0 #4D6586;
-  -webkit-box-shadow: inset 0 1px 0 0 #4D6586;
-  box-shadow: inset 0 1px 0 0 #4D6586;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #455A77), color-stop(1, #3B4D66));
-  background: -moz-linear-gradient(top, #455A77 5%, #3B4D66 100%);
-  background: -webkit-linear-gradient(top, #455A77 5%, #3B4D66 100%);
-  background: -o-linear-gradient(top, #455A77 5%, #3B4D66 100%);
-  background: -ms-linear-gradient(top, #455A77 5%, #3B4D66 100%);
-  background: linear-gradient(to bottom, #455A77 5%, #3B4D66 100%);
+  border-color: #324257;
+  -moz-box-shadow: inset 0 1px 0 0 #587297;
+  -webkit-box-shadow: inset 0 1px 0 0 #587297;
+  box-shadow: inset 0 1px 0 0 #587297;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #455A77), color-stop(1, #36465d));
+  background: -moz-linear-gradient(top, #455A77 5%, #36465d 100%);
+  background: -webkit-linear-gradient(top, #455A77 5%, #36465d 100%);
+  background: -o-linear-gradient(top, #455A77 5%, #36465d 100%);
+  background: -ms-linear-gradient(top, #455A77 5%, #36465d 100%);
+  background: linear-gradient(to bottom, #455A77 5%, #36465d 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to',GradientType=0);
   color: #CDCDCD;
-  text-shadow: 1px 1px 1px #36465D; }
+  text-shadow: 1px 1px 1px #4e4e4e; }
 
 .ui-button-option .ui-button, .ui-button-ul .ui-button {
   margin: 0 !important; }
@@ -437,15 +442,25 @@ ul.ui-list {
   -webkit-border-bottom-left-radius: 0;
   border-bottom-left-radius: 0; }
 
-.ui-button-option.ui-open .ui-option .ui-button-inner {
+.ui-button-option.ui-open.down .ui-option .ui-button-inner {
   -moz-border-bottom-right-radius: 0;
   -webkit-border-bottom-right-radius: 0;
   border-bottom-right-radius: 0; }
 
-.ui-button-option.ui-open .ui-main .ui-button-inner {
+.ui-button-option.ui-open.down .ui-main .ui-button-inner {
   -moz-border-bottom-left-radius: 0;
   -webkit-border-bottom-left-radius: 0;
   border-bottom-left-radius: 0; }
+
+.ui-button-option.ui-open.up .ui-option .ui-button-inner {
+  -moz-border-top-right-radius: 0;
+  -webkit-border-top-right-radius: 0;
+  border-top-right-radius: 0; }
+
+.ui-button-option.ui-open.up .ui-main .ui-button-inner {
+  -moz-border-top-left-radius: 0;
+  -webkit-border-top-left-radius: 0;
+  border-top-left-radius: 0; }
 
 .ui-button-option-ul .ui-button-inner, .ui-button-ul .ui-button-inner {
   -moz-border-radius: 0;
@@ -502,6 +517,8 @@ ul.ui-list {
     .ui-button-group .ui-button-ul li {
       float: left;
       list-style: none; }
+      .ui-button-group .ui-button-ul li:not(:first-child) {
+        margin-left: -1px; }
       .ui-button-group .ui-button-ul li:last-child .ui-button-inner {
         -moz-border-top-right-radius: 3px;
         -webkit-border-top-right-radius: 3px;
@@ -516,10 +533,13 @@ ul.ui-list {
         -moz-border-bottom-left-radius: 3px;
         -webkit-border-bottom-left-radius: 3px;
         border-bottom-left-radius: 3px; }
-    .ui-button-group .ui-button-ul .ui-button.current .ui-button-inner {
-      background: #CDCDCD;
-      box-shadow: inherit;
-      border-color: #BCBCBC; }
+      .ui-button-group .ui-button-ul li .ui-button.current {
+        position: relative;
+        z-index: 1; }
+        .ui-button-group .ui-button-ul li .ui-button.current .ui-button-inner {
+          background: #CDCDCD;
+          box-shadow: inherit;
+          border-color: #BCBCBC; }
 
 .ui-button-inner.ui-button-title.icon {
   padding-left: 24px; }
@@ -528,27 +548,26 @@ ul.ui-list {
   opacity: 0.5; }
 
 .ui-button-active:hover .ui-button-inner {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
-  background: -moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: -webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: -o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: -ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e5e5e5), color-stop(1, #f9f9f9));
+  background: -moz-linear-gradient(top, #e5e5e5 5%, #f9f9f9 100%);
+  background: -webkit-linear-gradient(top, #e5e5e5 5%, #f9f9f9 100%);
+  background: -o-linear-gradient(top, #e5e5e5 5%, #f9f9f9 100%);
+  background: -ms-linear-gradient(top, #e5e5e5 5%, #f9f9f9 100%);
+  background: linear-gradient(to bottom, #e5e5e5 5%, #f9f9f9 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to',GradientType=0);
-  background-color: #e9e9e9; }
+  background-color: #e5e5e5;
+  border-color: #e0e0e0; }
 
 .ui-button-active:hover .ui-button-inner.type2 {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #3B4D66), color-stop(1, #455A77));
-  background: -moz-linear-gradient(top, #3B4D66 5%, #455A77 100%);
-  background: -webkit-linear-gradient(top, #3B4D66 5%, #455A77 100%);
-  background: -o-linear-gradient(top, #3B4D66 5%, #455A77 100%);
-  background: -ms-linear-gradient(top, #3B4D66 5%, #455A77 100%);
-  background: linear-gradient(to bottom, #3B4D66 5%, #455A77 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #36465d), color-stop(1, #455A77));
+  background: -moz-linear-gradient(top, #36465d 5%, #455A77 100%);
+  background: -webkit-linear-gradient(top, #36465d 5%, #455A77 100%);
+  background: -o-linear-gradient(top, #36465d 5%, #455A77 100%);
+  background: -ms-linear-gradient(top, #36465d 5%, #455A77 100%);
+  background: linear-gradient(to bottom, #36465d 5%, #455A77 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to',GradientType=0);
-  background-color: #3B4D66; }
-
-.ui-paginator .ui-button-active:hover .ui-button-inner {
-  border-color: #CDCDCD; }
+  background-color: #36465d;
+  border-color: #324257; }
 
 /* UI Base Layout
 -----------------------------------------------------------------------------------------------------*/
@@ -1249,7 +1268,8 @@ html, body {
     white-space: nowrap;
     line-height: 24px;
     padding: 3px;
-    background: #FFFFFF; }
+    background: #FFFFFF;
+    vertical-align: top; }
   .ui-table-grid tbody td.num {
     padding: 0 5px 0 5px;
     font-weight: bold;
