--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -246,25 +246,18 @@ span.tag-low {
   height: 100px; }
 
 .ui-field-select {
-  background-repeat: no-repeat;
-  background-position: right center;
-  border: 1px solid #dcdcdc;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
-  background: -moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$from', endColorstr='$to',GradientType=0); }
+  border: 1px solid #d8d8d8;
+  -moz-box-shadow: inset 0 1px 0 0 white;
+  -webkit-box-shadow: inset 0 1px 0 0 white;
+  box-shadow: inset 0 1px 0 0 white;
+  background: #F2F2F2 no-repeat right center; }
   .ui-field-select select {
     opacity: 0;
     width: 100%; }
   .ui-field-select .ui-select {
     position: absolute;
     font-weight: normal;
-    background-image: url(../images/ui/bullet_arrow_down.png);
-    background-repeat: no-repeat;
-    background-position: right 3px center;
+    background: url(../images/ui/bullet_arrow_down.png) no-repeat right 3px center;
     width: 100%; }
   .ui-field-select .ui-select.disabled {
     color: #CCCCCC; }
@@ -299,9 +292,7 @@ ul.ui-list {
     color: #FFFFFF; }
 
 .ui-field-input .ui-loader {
-  background-image: url(../images/ui/tree/loading_white.gif);
-  background-repeat: no-repeat;
-  background-position: 99% 2px; }
+  background: inherit url(../images/ui/tree/loading_white.gif) no-repeat 99% 2px; }
 .ui-field-input input, .ui-field-input textarea, .ui-field-input select {
   background: none;
   border: none;
@@ -314,12 +305,10 @@ ul.ui-list {
   position: absolute;
   top: 0;
   right: 0;
-  background-position: center center;
-  background-color: #EEEEEE;
-  border-top: 1px solid #F9F9F9;
-  border-left: 1px solid #CDCDCD;
-  border-bottom: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE; }
+  background: center center #EEEEEE;
+  border: 1px solid #EEEEEE;
+  border-top-color: #F9F9F9;
+  border-left-color: #CDCDCD; }
   .ui-field-input a.icon {
     padding-left: 0;
     -moz-border-top-right-radius: 3px;
@@ -499,9 +488,7 @@ ul.ui-list {
   height: 22px;
   top: 0;
   left: 0;
-  background-image: url(../images/ui/bullet_arrow_down.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%; }
+  background: inherit url(../images/ui/bullet_arrow_down.png) no-repeat 50% 50%; }
 
 .ui-button-option-ul {
   z-index: 99999; }
@@ -758,13 +745,10 @@ html, body {
   background-color: #E5E5E5; }
 
 .ui-start-menu-childs {
-  background-image: url(../images/ui/menu_down.gif);
-  background-repeat: no-repeat;
-  background-position: 180px 14px; }
+  background: inherit url(../images/ui/menu_down.gif) no-repeat 180px 14px; }
 
 .ui-start-menu-button {
-  background-repeat: no-repeat;
-  background-position: 5px 50%;
+  background: no-repeat 5px 50%;
   color: #EEEEEE;
   height: 29px;
   line-height: 30px;
@@ -1076,8 +1060,7 @@ html, body {
   width: 5px;
   height: 100%;
   float: left;
-  background: #EEEEEE url(../images/ui/knob_horizontal.png) no-repeat;
-  background-position: 50% 50%;
+  background: #EEEEEE url(../images/ui/knob_horizontal.png) no-repeat 50% 50%;
   cursor: ew-resize;
   border: 1px solid #CDCDCD;
   border-bottom: none;
@@ -1203,21 +1186,13 @@ html, body {
     height: 100%;
     background-position: center center; }
   .ui-table-list .ui-icon-arrow {
-    background-image: url(../images/ui/arrow_up.png);
-    background-repeat: no-repeat;
-    background-position: center top; }
+    background: url(../images/ui/arrow_up.png) no-repeat center top; }
   .ui-table-list .ui-icon-arrow a {
-    background-image: url(../images/ui/arrow_down.png);
-    background-repeat: no-repeat;
-    background-position: center bottom; }
+    background: url(../images/ui/arrow_down.png) no-repeat center bottom; }
   .ui-table-list .ui-icon-asc a {
-    background-image: url(../images/ui/arrow_up.png);
-    background-repeat: no-repeat;
-    background-position: center center; }
+    background: url(../images/ui/arrow_up.png) no-repeat center center; }
   .ui-table-list .ui-icon-desc a {
-    background-image: url(../images/ui/arrow_down.png);
-    background-repeat: no-repeat;
-    background-position: center center; }
+    background: url(../images/ui/arrow_down.png) no-repeat center center; }
   .ui-table-list table {
     background: #F2F2F2;
     border-spacing: 1px;
@@ -1435,8 +1410,7 @@ div.search {
     content: "";
     width: 0;
     height: 0;
-    border-width: 6px;
-    border-style: solid; }
+    border: 6px solid; }
   .ui-data-tip.show:after, .ui-data-tip.show:before {
     opacity: 1; }
   .ui-data-tip.top-tip:after, .ui-data-tip.top-tip:before {
@@ -1626,8 +1600,7 @@ div.search {
 .editor-context {
   width: 100%;
   height: 100%;
-  background-repeat: no-repeat;
-  background-position: center center; }
+  background: no-repeat center center; }
 
 .editor-tab {
   line-height: 22px;
@@ -1668,8 +1641,7 @@ div.search {
   float: left;
   width: 256px;
   height: 256px;
-  background-image: url(../images/ui/color/color_picker_gradient.png);
-  background-repeat: no-repeat;
+  background: inherit url(../images/ui/color/color_picker_gradient.png) no-repeat;
   position: relative; }
 
 .ui-colorpicker-mid {
@@ -1677,9 +1649,7 @@ div.search {
   height: 256px;
   width: 35px;
   margin: 0 10px 0 10px;
-  background-image: url(../images/ui/color/color_picker_bar.png);
-  background-repeat: no-repeat;
-  background-position: 50% 0;
+  background: inherit url(../images/ui/color/color_picker_bar.png) no-repeat 50% 0;
   position: relative; }
 
 .ui-colorpicker-right {
@@ -1700,8 +1670,7 @@ div.search {
   height: 11px;
   top: -5px;
   left: -5px;
-  background-image: url(../images/ui/color/color_picker_circle.gif);
-  background-repeat: no-repeat;
+  background: inherit url(../images/ui/color/color_picker_circle.gif) no-repeat;
   position: absolute; }
 
 .ui-colorpicker-mid span {
@@ -1709,8 +1678,7 @@ div.search {
   height: 9px;
   width: 35px;
   top: -4px;
-  background-image: url(../images/ui/color/color_picker_arrows.gif);
-  background-repeat: no-repeat;
+  background: inherit url(../images/ui/color/color_picker_arrows.gif) no-repeat;
   position: absolute; }
 
 .ui-colorpicker-right .ui-field-input {
@@ -1730,9 +1698,7 @@ div.search {
   height: 150px;
   border: 1px solid #EEEEEE;
   margin: 10px 0 0 10px;
-  background: #FFFFFF;
-  background-position: center;
-  background-repeat: no-repeat; }
+  background: #FFFFFF center no-repeat; }
 
 .ui-file-clicked {
   border: 1px solid #BBBBBB; }
@@ -2099,9 +2065,7 @@ div.search {
   width: 120px;
   height: 120px;
   position: relative;
-  background: #FFFFFF;
-  background-position: 50% 50%;
-  background-repeat: no-repeat; }
+  background: #FFFFFF no-repeat 50% 50%; }
   .custom-prof-image.icon-large {
     background-size: 120px 120px; }
 
