--- a/lib/css/main.scss
+++ b/lib/css/main.scss
@@ -193,7 +193,7 @@ span.tag-low {
   height:23px;
   display:block;
   float:left;
-  margin-right:3px;
+  padding-right:3px;
 }
 .ui-field-input, .ui-field-select {
   float:left;
