--- a/lib/css/main.scss
+++ b/lib/css/main.scss
@@ -238,6 +238,9 @@ span.tag-low {
 .ui-field-input input[disabled], .ui-field-area textarea[disabled], .ui-field-select select[disabled] {
   color:#AAAAAA;
 }
+.ui-field-input.disabled {
+  background:#FCFCFC;
+}
 .ui-field-input.date, .ui-field-input.function {
   padding-right:25px;
 }
@@ -254,19 +257,26 @@ ul.ui-list {
   list-style: none;
   background:#EEEEEE;
   z-index: 999999;
+  overflow:auto;
+  overflow-x:hidden;
   @include box-shadow(0 8px 6px -6px #C5C5C5);
   li {
     cursor: pointer;
     padding:3px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
-  li:hover, li.current, li:hover *, li.current * {
-    background:#3B4D66;
+  li.current, li.current * {
+    background:#3B4D66 !important;
     color:#FFFFFF;
+  }
+  li:hover, li:hover * {
+    background:#E1E1E1;
   }
 }
 .ui-field-input {
   .ui-loader {
-    background:inherit url(../images/ui/tree/loading_white.gif) no-repeat 99% 2px;
+    background: url(../images/ui/tree/loading_white.gif) no-repeat 99% 2px;
   }
   input, textarea, select {
     background:none;
@@ -422,7 +432,7 @@ ul.ui-list {
   height: 22px;
   top: 0;
   left: 0;
-  background:inherit url(../images/ui/bullet_arrow_down.png) no-repeat 50% 50%;
+  background: url(../images/ui/bullet_arrow_down.png) no-repeat 50% 50%;
 }
 .ui-button-option-ul {
   z-index:99999;
@@ -674,7 +684,7 @@ html,body{
   background-color: #E5E5E5;
 }
 .ui-start-menu-childs {
-  background: inherit url(../images/ui/menu_down.gif) no-repeat 180px 14px;
+  background: url(../images/ui/menu_down.gif) no-repeat 180px 14px;
 }
 .ui-start-menu-button {
   background: no-repeat 5px 50%;
@@ -1710,7 +1720,7 @@ div.search {
   float:left;
   width:256px;
   height:256px;
-  background:inherit url(../images/ui/color/color_picker_gradient.png) no-repeat;
+  background: url(../images/ui/color/color_picker_gradient.png) no-repeat;
   position:relative;
 }
 .ui-colorpicker-mid {
@@ -1718,7 +1728,7 @@ div.search {
   height:256px;
   width:35px;
   margin:0 10px 0 10px;
-  background:inherit url(../images/ui/color/color_picker_bar.png) no-repeat 50% 0;
+  background: url(../images/ui/color/color_picker_bar.png) no-repeat 50% 0;
   position:relative;
 }
 .ui-colorpicker-right {
@@ -1739,7 +1749,7 @@ div.search {
   height:11px;
   top:-5px;
   left:-5px;
-  background:inherit url(../images/ui/color/color_picker_circle.gif) no-repeat;
+  background: url(../images/ui/color/color_picker_circle.gif) no-repeat;
   position:absolute;
 }
 .ui-colorpicker-mid span {
@@ -1747,7 +1757,7 @@ div.search {
   height: 9px;
   width: 35px;
   top:-4px;
-  background:inherit url(../images/ui/color/color_picker_arrows.gif) no-repeat;
+  background: url(../images/ui/color/color_picker_arrows.gif) no-repeat;
   position:absolute;
 }
 .ui-colorpicker-right .ui-field-input {
