--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -274,6 +274,9 @@ span.tag-low {
 .ui-field-input.date {
   width: 95px !important; }
 
+.ui-field-input.date.time {
+  width: 130px !important; }
+
 .ui-field-input.date-range {
   width: 167px !important; }
 
@@ -1330,7 +1333,7 @@ div.search {
 .ui-calendar {
   background: #E7E7E7;
   padding: 5px; }
-  .ui-calendar .ui-cal-navigation, .ui-calendar .ui-calendar-option {
+  .ui-calendar .ui-cal-navigation, .ui-calendar .ui-calendar-option, .ui-calendar .ui-cal-time {
     overflow: hidden; }
   .ui-calendar .ui-cal-navigation p {
     text-align: center;
@@ -1369,6 +1372,14 @@ div.search {
   .ui-calendar table tbody span.today {
     font-weight: bold;
     background: #FFFFFF; }
+  .ui-calendar .ui-cal-time {
+    margin: 7px auto 0 auto;
+    width: 70px; }
+  .ui-calendar .ui-cal-time span {
+    float: left;
+    line-height: 24px;
+    width: 10px;
+    text-align: center; }
   .ui-calendar .ui-calendar-option {
     margin-top: 5px; }
 
